--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -15,6 +15,7 @@ backend/.mvn/wrapper/maven-wrapper.jar
 
 ### IntelliJ IDEA ###
 .idea
+../.idea
 *.iws
 *.iml
 *.ipr
@@ -31,3 +32,7 @@ build/
 
 ### VS Code ###
 .vscode/
+
+*.DS_STORE
+../*.DS_STORE
+../.idea
